@@ -147,7 +147,7 @@ flexible messaging model and an intuitive client API.</description>
     <avro.version>1.10.2</avro.version>
     <joda.version>2.10.5</joda.version>
     <jclouds.version>2.4.0</jclouds.version>
-    <guice.version>5.0.1</guice.version>
+    <guice.version>5.1.0</guice.version>
     <sqlite-jdbc.version>3.8.11.2</sqlite-jdbc.version>
     <mysql-jdbc.version>8.0.11</mysql-jdbc.version>
     <postgresql-jdbc.version>42.2.25</postgresql-jdbc.version>
@@ -622,6 +622,18 @@ flexible messaging model and an intuitive client API.</description>
         <groupId>com.google.guava</groupId>
         <artifactId>guava</artifactId>
         <version>${guava.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>com.google.inject</groupId>
+        <artifactId>guice</artifactId>
+        <version>${guice.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>com.google.inject.extensions</groupId>
+        <artifactId>guice-assistedinject</artifactId>
+        <version>${guice.version}</version>
       </dependency>
 
       <dependency>
@@ -1406,7 +1418,7 @@ flexible messaging model and an intuitive client API.</description>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
-          <argLine>@{testJacocoAgentArgument} -Xmx1G -XX:+UseG1GC
+          <argLine>${testJacocoAgentArgument} -Xmx1G -XX:+UseG1GC
             -Dpulsar.allocator.pooled=true
             -Dpulsar.allocator.leak_detection=Advanced
             -Dpulsar.allocator.exit_on_oom=false
@@ -1890,6 +1902,7 @@ flexible messaging model and an intuitive client API.</description>
         <test.additional.args>
           --add-opens java.base/jdk.internal.loader=ALL-UNNAMED
           --add-opens java.base/java.lang=ALL-UNNAMED <!--Mockito-->
+          --add-opens java.base/java.io=ALL-UNNAMED <!--Bookkeeper NativeIO -->
         </test.additional.args>
       </properties>
       <build>
@@ -1909,6 +1922,9 @@ flexible messaging model and an intuitive client API.</description>
     </profile>
     <profile>
       <id>coverage</id>
+      <properties>
+        <testJacocoAgentArgument>@{jacoco.agent.argument}</testJacocoAgentArgument>
+      </properties>
       <build>
         <plugins>
           <plugin>
@@ -1916,7 +1932,7 @@ flexible messaging model and an intuitive client API.</description>
             <artifactId>jacoco-maven-plugin</artifactId>
             <version>${jacoco-maven-plugin.version}</version>
             <configuration>
-              <propertyName>testJacocoAgentArgument</propertyName>
+              <propertyName>jacoco.agent.argument</propertyName>
             </configuration>
             <executions>
               <execution>
